--- a/tmux.conf
+++ b/tmux.conf
@@ -16,7 +16,7 @@ set -g status-position top
 set -g status-justify left
 set -g status-style 'fg=colour1'
 set -g status-left ''
-set -g status-right '#{pane_current_path} | %Y-%m-%d %-I:%M%p %Z'
+set -g status-right ' #T | #{pane_current_path} | %Y-%m-%d %-I:%M%p %Z'
 set -g status-right-length 50
 set -g status-left-length 10
 
@@ -36,6 +36,10 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+
+# Switch windows with h and l
+bind-key H select-window -t:-1
+bind-key L select-window -t:+1
 
 # Use vim keys for scrollback (Enter Scrollback with: <ctrl + b> + "[" )
 set -g mode-keys vi
