--- a/tmux.conf
+++ b/tmux.conf
@@ -16,7 +16,7 @@ set -g status-position top
 set -g status-justify left
 set -g status-style 'fg=colour1'
 set -g status-left ''
-set -g status-right ' #T | #{pane_current_path} | %Y-%m-%d %-I:%M%p %Z'
+set -g status-right ' @#H | 📅 %Y-%m-%d 🕑 %-I:%M%p %Z'
 set -g status-right-length 50
 set -g status-left-length 10
 
